# rust1

./: Cargo.toml  README.md  build.rs
plans/: LEARNING_PLAN.md
sessions/: 2025-11-17-i-am-learning-rust-i-need-a-basic-project-that-sh.txt  2025-11-17-read-planslearningplanmd-and-implement-it.txt
src/: lib.rs  main.rs
